--- a/ty/.vscode/settings.json
+++ b/ty/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
     "jupyter.jupyterServerType": "local",
     "python.linting.pylintEnabled":true,
-    "python.linting.enabled":true,
-    "python.pythonPath": "/home/vim/Desktop/tykim/Anaconda3/envs/tykim/bin/python3.7.exe"
+    "python.linting.enabled": true
 }
